# uniprot-unipressed-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
src/uniprot_mcp/: __init__.py  clients.py  pagination.py  server.py
tests/: __init__.py  test_clients.py  test_format_parameter.py  test_pagination.py  test_server.py
