[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uniprot-mcp"
version = "0.1.0"
description = "MCP server for querying UniProt protein database via unipressed"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = ["mcp", "uniprot", "protein", "bioinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "fastmcp>=2.0.0,<3.0.0",
    "unipressed>=1.4.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
uniprot-mcp = "uniprot_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/uniprot_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (requires network access to UniProt API)",
]

